examples/test/testpolicy17140.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17140
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key9: value16
      key38: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value16
          key10: value18
          key15: value41
      podSelector:
        matchLabels:
          key8: value22
          key0: value29
          key47: value18
